[package]
name = "escrow"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "escrow"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]
anchor-debug = []
custom-heap = []
custom-panic = []


[dependencies]
anchor-lang = {version = "1.0.2", features = ["init-if-needed"] }
anchor-spl = "1.0.0"

[dev-dependencies]
anchor-litesvm = { path = "../../../../oss/upstream/anchor-litesvm/crates/anchor-litesvm" }
spl-token = { version = "9.0", features = ["no-entrypoint"] }
spl-associated-token-account = { version = "8.0", features = ["no-entrypoint"] }


[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(target_os, values("solana"))'] }
